--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap Template</title>
+    <title>Github Avatars</title>
 
     <!-- Bootstrap -->
     <link href="css/style.css" rel="stylesheet">
@@ -15,9 +15,53 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script src="/js/app.js"></script>
   </head>
   <body>
-    <h1 id="hello">Hello, world!</h1>
-    <script src="/js/app.js"></script>
+    <div class="container">
+      <div class="page-header">
+        <h1 id="hello">Hello, Githubbers&hellip;</h1>
+      </div>
+      <p>You are all so beautiful!</p>
+
+      <div class="row">
+        <div class="col-md-1 avatar">
+          <img src="https://avatars.githubusercontent.com/u/614?v=3" alt="avatar"/>
+        </div>
+        <div class="col-md-1 avatar">
+          <img src="https://avatars.githubusercontent.com/u/820?v=3" alt="avatar"/>
+        </div>
+        <div class="col-md-1 avatar">
+          <img src="https://avatars.githubusercontent.com/u/449?v=3" alt="avatar"/>
+        </div>
+        <div class="col-md-1 avatar">
+          <img src="https://avatars.githubusercontent.com/u/1?v=3" alt="avatar"/>
+        </div>
+        <div class="col-md-1 avatar">
+          <img src="https://avatars.githubusercontent.com/u/404?v=3" alt="avatar"/>
+        </div>
+        <div class="col-md-1 avatar">
+          <img src="https://avatars.githubusercontent.com/u/820?v=3" alt="avatar"/>
+        </div>
+        <div class="col-md-1 avatar">
+          <img src="https://avatars.githubusercontent.com/u/820?v=3" alt="avatar"/>
+        </div>
+        <div class="col-md-1 avatar">
+          <img src="https://avatars.githubusercontent.com/u/820?v=3" alt="avatar"/>
+        </div>
+        <div class="col-md-1 avatar">
+          <img src="https://avatars.githubusercontent.com/u/820?v=3" alt="avatar"/>
+        </div>
+        <div class="col-md-1 avatar">
+          <img src="https://avatars.githubusercontent.com/u/820?v=3" alt="avatar"/>
+        </div>
+        <div class="col-md-1 avatar">
+          <img src="https://avatars.githubusercontent.com/u/820?v=3" alt="avatar"/>
+        </div>
+        <div class="col-md-1 avatar">
+          <img src="https://avatars.githubusercontent.com/u/820?v=3" alt="avatar"/>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
