--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <script src="/js/app.js"></script>
+
   </head>
   <body>
     <div class="container">
@@ -62,6 +62,11 @@
           <img src="https://avatars.githubusercontent.com/u/820?v=3" alt="avatar"/>
         </div>
       </div>
+      <div class="row">
+        <div id="mount-point">
+        </div>
+      </div>
     </div>
+    <script src="/js/app.js"></script>
   </body>
 </html>
